--- a/MasterDetailPageNavigation/MasterDetailPageNavigation.csproj
+++ b/MasterDetailPageNavigation/MasterDetailPageNavigation.csproj
@@ -35,12 +35,12 @@
     <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MasterPageItem.cs" />
-    <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="Pages\ContactsPage.cs" />
     <Compile Include="Pages\MainPage.cs" />
     <Compile Include="Pages\MasterPage.cs" />
     <Compile Include="Pages\ReminderPage.cs" />
     <Compile Include="Pages\TodoListPage.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
