--- a/WindowsPhone/MasterDetailPageNavigation.WindowsPhone.csproj
+++ b/WindowsPhone/MasterDetailPageNavigation.WindowsPhone.csproj
@@ -171,7 +171,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\WideLogo.png" />
+    <Content Include="contacts.png" />
     <Content Include="README_FIRST.txt" />
+    <Content Include="reminders.png" />
+    <Content Include="swap.png" />
+    <Content Include="todo.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Add.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Check.png" />
